<resources>
    <string name="app_name">Popular Movies</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="default_movie_poster_content_description">A Movie Poster</string>
    <string name="popular_menu_item">Most Popular</string>
    <string name="ratings_menu_item">Highest Rated</string>

    <!--Main Activity -->
    <string name="main_activity_title">Pop Movies</string>
    <string name="popular_sorted_true">Movies already sorted by popularity.</string>
    <string name="rated_sorted_true">Movies already sorted by highest rated.</string>
    <string name="network_error">No internet connection.</string>

    <!-- Intent EXTRA Strings -->
    <string name="TITLE_EXTRA">com.krinotech.popularmovies.TITLE</string>
    <string name="ORIGINAL_TITLE_EXTRA">com.krinotech.popularmovies.ORIGINAL_TITLE</string>
    <string name="PLOT_SYNOPSIS_EXTRA">com.krinotech.popularmovies.PLOT_SYNOPSIS</string>
    <string name="IMAGE_URL_EXTRA">com.krinotech.popularmovies.IMAGE_URL</string>
    <string name="VOTE_AVERAGE_EXTRA">com.krinotech.popularmovies.VOTE_AVERAGE</string>
    <string name="RELEASE_DATE_EXTRA">com.krinotech.popularmovies.RELEASE_DATE</string>

    <!-- Details Activity -->
    <string name="details_activity_title">Movie Details</string>
    <string name="release_date_header">Release Date</string>
    <string name="original_title_header">Original Title</string>
    <string name="ratings_header">Ratings</string>
    <string name="ID_EXTRA">com.krinotech.popularmovies.ID_EXTRA</string>
    <string name="failed_to_load_details">Failed to load trailers and reviews.</string>
    <string name="play_button">Play</string>
    <string name="length">Length</string>
    <string name="revenue">Revenue</string>
    <string name="budget">Budget</string>
    <string name="REVIEWS_EXTRA">com.krinotech.popularmovies.REVIEWS_EXTRA</string>
    <string name="SAVED_MOVIE_EXTRA">com.krinotech.popularmovies.SAVED_MOVIE_EXTRA</string>
    <string name="review_activity_title">Movie Reviews</string>
</resources>
