<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="movie"
            type="com.krinotech.popularmovies.model.Movie"
            />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ProgressBar
            android:id="@+id/pb_details"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            />
        <androidx.core.widget.NestedScrollView
            android:id="@+id/sv_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            tools:context=".view.DetailsActivity"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tv_movie_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_size"
                    android:text="@{movie.title}"
                    android:padding="30dp"
                    tools:text="Movie Title"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_movie_details_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_toStartOf="@+id/tv_details_release_date_header"
                        android:layout_toLeftOf="@+id/tv_details_release_date_header"
                        android:adjustViewBounds="true"
                        android:contentDescription="@{movie.title}"
                        android:padding="10dp"
                        android:scaleType="fitXY"
                        app:imageUrl="@{movie.imageUrl}"
                        />

                    <Button
                        android:id="@+id/favorites_button"
                        android:text="@string/favorite"
                        android:layout_below="@id/iv_movie_details_image"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        style="@style/buttonStyle"
                        />
                    <TextView
                        android:id="@+id/tv_details_original_title_header"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@id/iv_movie_details_image"
                        android:layout_toEndOf="@id/iv_movie_details_image"
                        android:text="@string/original_title_header"
                        style="@style/headerDetails"
                        />

                    <TextView
                        android:id="@+id/tv_details_original_title"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_details_original_title_header"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textAlignment="viewEnd"
                        android:text="@{movie.originalTitle}"
                        android:padding="5dp"
                        tools:text="The Wave incoming: Part Three thousand"
                        android:gravity="end" />

                    <TextView
                        android:id="@+id/tv_details_release_date_header"
                        android:layout_below="@+id/tv_details_original_title"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/release_date_header"
                        style="@style/headerDetails"
                        />

                    <TextView
                        android:id="@+id/tv_details_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_details_release_date_header"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerHorizontal="true"
                        android:text="@{movie.releaseDate}"
                        android:padding="5dp"
                        tools:text="2017-9-5" />

                    <TextView
                        android:id="@+id/tv_rating_header"
                        android:layout_below="@+id/tv_details_release_date"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/ratings_header"
                        style="@style/headerDetails"
                        />

                    <TextView
                        android:id="@+id/tv_details_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_rating_header"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerHorizontal="true"
                        android:padding="5dp"
                        android:text="@{movie.voteAverageText}"
                        tools:text="9/10" />

                    <TextView
                        android:id="@+id/tv_budget_header"
                        android:layout_below="@+id/tv_details_vote_average"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/budget"
                        style="@style/headerDetails"
                        />

                    <TextView
                        android:id="@+id/tv_budget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_budget_header"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerHorizontal="true"
                        android:padding="5dp"
                        android:text="@{movie.budgetStats}"
                        tools:text="$12,5000" />

                    <TextView
                        android:id="@+id/tv_revenue_header"
                        android:layout_below="@+id/tv_budget"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/revenue"
                        style="@style/headerDetails"
                        />

                    <TextView
                        android:id="@+id/tv_revenue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_revenue_header"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerHorizontal="true"
                        android:padding="5dp"
                        android:text="@{movie.revenueStats}"
                        tools:text="$12,500,000" />

                    <TextView
                        android:id="@+id/tv_runtime_header"
                        android:layout_below="@+id/tv_revenue"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/length"
                        style="@style/headerDetails"
                        />

                    <TextView
                        android:id="@+id/tv_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_runtime_header"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerHorizontal="true"
                        android:padding="5dp"
                        android:text="@{movie.runtimeStats}"
                        tools:text="60 Minutes" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_plot_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@{movie.plotSynopsis}"
                    android:padding="10dp"
                    tools:text="@tools:sample/lorem/random"
                />
                <ListView
                    android:id="@+id/list_view_trailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:background="@drawable/list_view_border"
                    android:nestedScrollingEnabled="true"
                    />
                <TextView
                    android:id="@+id/tv_review_amount_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="24sp"
                    android:text="@{movie.reviewStats}"
                    android:padding="20dp"
                    tools:text="30 Total Reviews"
                    />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</layout>